# Gauge

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
gauge/: common.hpp  pch.hpp  register_types.cpp  register_types.hpp
gauge/components/: aabb_gizmo.cpp  aabb_gizmo.hpp  billboard.cpp  billboard.hpp  camera.cpp  camera.hpp  character_controller.cpp  character_controller.hpp  component.cpp  component.hpp  drawable.hpp  mesh_instance.cpp  mesh_instance.hpp  model.cpp  model.hpp
gauge/components/light/: point_light.cpp  point_light.hpp
gauge/components/physics/: static_body.cpp  static_body.hpp
gauge/core/: app.cpp  app.hpp  config.cpp  config.hpp  filesystem.cpp  filesystem.hpp  handle.hpp  math.hpp  pool.cpp  pool.hpp  resource_manager.hpp  string_id.cpp  string_id.hpp
gauge/input/: input.cpp  input.hpp
gauge/math/: common.cpp  common.hpp  transform.cpp  transform.hpp
gauge/physics/: character.hpp  physics.cpp  physics.hpp  shape.hpp
gauge/physics/jolt/: character.cpp  character.hpp  jolt.cpp  jolt.hpp
gauge/renderer/: aabb.cpp  aabb.hpp  command_buffer.hpp  common.hpp  gltf.cpp  gltf.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp
gauge/renderer/shaders/: aabb.slang  input_structures.slang  limits.h  node_select.slang  shader.cpp  shader.hpp  simple.slang  simple.spv  triangle.slang  triangle.spv
gauge/renderer/shaders/aabb/: aabb.slang  aabb_shader.cpp  aabb_shader.hpp
gauge/renderer/shaders/billboard/: billboard.slang  billboard_shader.cpp  billboard_shader.hpp
gauge/renderer/shaders/debug_line/: debug_line.slang  debug_line_shader.cpp  debug_line_shader.hpp
gauge/renderer/shaders/gizmo/: gizmo.slang  gizmo_shader.cpp  gizmo_shader.hpp
gauge/renderer/shaders/pbr/: pbr.slang  pbr_shader.cpp  pbr_shader.hpp
gauge/renderer/vulkan/: command_buffer.cpp  command_buffer.hpp  common.hpp  descriptor.cpp  descriptor.hpp  graphics_pipeline_builder.cpp  graphics_pipeline_builder.hpp  imgui.cpp  imgui.hpp  pipeline.hpp  renderer_vulkan.cpp  renderer_vulkan.hpp  shader_module.cpp  shader_module.hpp  vma_usage.cpp
gauge/scene/: node.cpp  node.hpp  scene.cpp  scene.hpp  scene_tree.cpp  scene_tree.hpp  yaml.hpp
gauge/ui/: window.cpp  window.hpp
include/: gauge.hpp
sandbox/: CMakeLists.txt  project.yaml
sandbox/src/: game.cpp  game.hpp  main.cpp
src/: config.cpp  config.hpp  gauge.cpp
src/core/: app.cpp  app.hpp  config.cpp
src/renderer/: renderer.cpp
src/ui/: window.cpp  window.hpp
